<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.sweatshop.storycal.presentationlayer.homepage.HomepageActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="96dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:contentDescription="@string/quote_homepage_btn"
            android:onClick="createPost"
            app:srcCompat="@drawable/icon_quote"
            tools:ignore="RtlHardcoded"
            tools:layout_editor_absoluteX="288dp"
            tools:layout_editor_absoluteY="0dp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="96dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:contentDescription="@string/notification_homepage_btn"
            app:srcCompat="@drawable/icon_bell"
            tools:layout_editor_absoluteX="192dp"
            tools:layout_editor_absoluteY="0dp" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="96dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:contentDescription="@string/messages_homepage_btn"
            app:srcCompat="@drawable/icon_message"
            tools:layout_editor_absoluteX="96dp"
            tools:layout_editor_absoluteY="0dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="96dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:contentDescription="@string/search_homepage_btn"
            app:srcCompat="@drawable/icon_search"
            tools:ignore="RtlHardcoded"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

    </LinearLayout>

    <View
        android:id="@+id/view3"
        style="@style/Divider"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_posts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:scrollbars="vertical" />
    </RelativeLayout>



</LinearLayout>
