<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context="com.sweatshop.storycal.presentationlayer.main_year.MainYearActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/profileName_lbl"
            android:layout_width="200dp"
            android:layout_height="22dp"
            android:layout_weight="1"
            android:text=""
            android:textColor="#333333"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="13dp"
            tools:layout_editor_absoluteY="8dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/personal_info_year_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-81dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/profileImage_Img"
                android:layout_width="82dp"
                android:layout_height="69dp"
                android:layout_weight="1"
                android:contentDescription="@string/profileName_img"
                app:srcCompat="@mipmap/ic_launcher_round"
                tools:layout_editor_absoluteX="14dp"
                tools:layout_editor_absoluteY="31dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="8dp">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:text="@string/followers_lbl"
                    android:textAlignment="center"
                    tools:layout_editor_absoluteX="200dp"
                    tools:layout_editor_absoluteY="42dp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:text="@string/followersTxt"
                    android:textAlignment="center"
                    android:textSize="12sp"
                    tools:layout_editor_absoluteX="200dp"
                    tools:layout_editor_absoluteY="67dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="8dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:text="@string/storiesTxt"
                    android:textAlignment="center"
                    android:textSize="12sp"
                    tools:layout_editor_absoluteX="112dp"
                    tools:layout_editor_absoluteY="67dp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:text="@string/stories_lbl"
                    android:textAlignment="center"
                    tools:layout_editor_absoluteX="112dp"
                    tools:layout_editor_absoluteY="42dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="8dp">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:text="@string/following_lbl"
                    android:textAlignment="center"
                    tools:layout_editor_absoluteX="288dp"
                    tools:layout_editor_absoluteY="42dp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:text="@string/followingTxt"
                    android:textAlignment="center"
                    android:textSize="12sp"
                    tools:layout_editor_absoluteX="288dp"
                    tools:layout_editor_absoluteY="67dp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/age_job"
            android:layout_width="85dp"
            android:layout_height="17dp"
            android:layout_weight="1"
            android:text="@string/ageWork_lbl"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="100dp" />
    </LinearLayout>

    <View
        android:id="@+id/divider1"
        style="@style/Divider"
        android:layout_height="0dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="126dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-77dp">

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:onClick="backToYear"
            app:srcCompat="@drawable/icon_back"
            tools:layout_editor_absoluteX="4dp"
            tools:layout_editor_absoluteY="138dp" />

        <TextView
            android:id="@+id/backToYearBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="backToYear"
            android:text="BACK TO YEAR VIEW"
            android:textColor="#333333"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="33dp"
            tools:layout_editor_absoluteY="139dp" />

        <ImageView
            android:id="@+id/search_btn"
            android:layout_width="96dp"
            android:layout_height="28dp"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/search_profile_btn"
            app:srcCompat="@drawable/icon_search"
            tools:layout_editor_absoluteX="288dp"
            tools:layout_editor_absoluteY="134dp" />

    </LinearLayout>

    <View
        android:id="@+id/divider2"
        style="@style/Divider"
        android:layout_height="0dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="169dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-77dp">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/albumList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="8dp"
            android:paddingBottom="0dp"
            android:paddingTop="15dp"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/divider2"
            app:layout_constraintVertical_bias="0.2" />
    </LinearLayout>


</LinearLayout>
