<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:weightSum="2"
    tools:context="com.sweatshop.storycal.presentationlayer.profile_picture.popup.PopupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.7"
        android:background="@android:color/black"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <ImageView
            android:id="@+id/imageCamera"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/pic7" />

    </LinearLayout>

    <View
        android:id="@+id/view"
        style="@style/Divider"
        android:layout_weight="1.7"
        app:layout_constraintBottom_toTopOf="@+id/home_btn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age_job"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight=".3"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="3"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <TextView
                android:id="@+id/importPhotoCamera_Gallery_btn"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="toGallery"
                android:text="@string/importPhotoCamera_Gallery_btn"
                android:textAlignment="center"
                android:textColor="#333333"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.969" />

            <TextView
                android:id="@+id/importPhotoCamera_Camera_btn"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/importPhotoCamera_Camera_btn"
                android:textAlignment="center"
                android:textColor="#333333"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.969" />

            <TextView
                android:id="@+id/importPhotoCamera_Web_btn"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/importPhotoCamera_Web_btn"
                android:textAlignment="center"
                android:textColor="#333333"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.969" />

        </LinearLayout>

</LinearLayout>
